@@ -11,7 +11,7 @@
     <!-- ========== ENCABEZADO ========== -->
     <header class="encabezado">
         
-        <a href="index.html" class="encabezado__logo-contenedor">
+        <a href="../index.html" class="encabezado__logo-contenedor">
             <div class="encabezado__logo-imagen"></div> 
             <div class="encabezado__logo-texto">
                 <span>Escuela técnica N°29 de 6</span>
@@ -68,16 +68,17 @@
                                 <h3>Formación Técnica de Excelencia</h3>
                                 <p>Elegir la Técnica N°29 es optar por una formación técnica de excelencia dentro del modelo de la "Secundaria del Futuro". Nuestra escuela ofrece títulos en Mecánica, Electricidad y Computación, brindando a los estudiantes una preparación sólida para el mundo laboral y académico.</p>
                             </div>
-                            <div class="diapositiva-imagen" style="background-image: url(/img/imagen_prueba1.jpg);"></div>
+                            <div class="diapositiva-imagen" style="background-image: url(img/imagen_prueba1.jpg);"></div>
                         </div>
-
+                        <!-- Los dos slides de abajo no tienen imagen porque realmente no encontramos ninguna de gente de la escuela trabajando-->
+                         <!-- hasta que encontremos evidencia de que en este establecimiento se trabaja, mantendremos los placeholders-->
                         <!-- SLIDE 2 -->
                         <div class="carrusel-diapositiva">
                             <div class="diapositiva-contenido">
                                 <h3>Compromiso y Aprendizaje Práctico</h3>
                                 <p>Contamos con un gran taller central y amplias aulas de computación que garantizan prácticas reales y un aprendizaje de calidad. Además, funcionamos con jornada completa y somos una "Escuela Consagrada" por nuestro compromiso con la educación ambiental y la formación integral de profesionales del futuro.</p>
                             </div>
-                            <div class="diapositiva-imagen" style="background-image: url('https://via.placeholder.com/800x600/999999/ffffff?text=Imagen+Mecánica');"></div>
+                            <div class="diapositiva-imagen" style="background-image: url('https://placehold.co/600x400');"></div>
                         </div>
 
                         <!-- SLIDE 3 -->
@@ -85,8 +86,8 @@
                             <div class="diapositiva-contenido">
                                 <h3>Construí tu Futuro con Nosotros</h3>
                                 <p>En la Técnica N°29 formamos jóvenes con vocación, innovación y compromiso. Te invitamos a ser parte de una comunidad educativa que impulsa el crecimiento personal y profesional desde la práctica y la excelencia.</p>
-                            </div>
-                            <div class="diapositiva-imagen" style="background-image: url('https://via.placeholder.com/800x600/bbbbbb/888888?text=Imagen+Electricidad');"></div>
+                            </div> 
+                            <div class="diapositiva-imagen" style="background-image: url('https://placehold.co/600x400');"></div>
                         </div>
 
                     </div>
@@ -102,19 +103,19 @@
         <section class="seccion-especialidades-contenedor">
             <div class="seccion-especialidades">
                 <div class="item-especialidad">
-                    <img src="/imgv1/boton_compu.png" alt="Computación" class="img-especialidad">
+                    <img src="img/boton_compu.png" alt="Computación" class="img-especialidad">
                     <h3>COMPUTACIÓN</h3>
                     <p>Formación en programación, redes y hardware, integrando la tecnología al servicio del conocimiento.</p>
                 </div>
 
                 <div class="item-especialidad">
-                    <img src="/imgv1/boton_meca.png" alt="Mecánica" class="img-especialidad">
+                    <img src="img/boton_meca.png" alt="Mecánica" class="img-especialidad">
                     <h3>MECÁNICA</h3>
                     <p>Diseño, operación y mantenimiento de sistemas mecánicos y herramientas industriales.</p>
                 </div>
 
                 <div class="item-especialidad">
-                    <img src="/imgv1/boton_elec.png" alt="Electricidad" class="img-especialidad">
+                    <img src="img/boton_elec.png" alt="Electricidad" class="img-especialidad">
                     <h3>ELECTRICIDAD</h3>
                     <p>Capacitación en instalaciones, mantenimiento y proyectos eléctricos con orientación profesional.</p>
                 </div>
